feat: listen for mail

--- a/package.json
+++ b/package.json
@@ -12,12 +12,16 @@
   "dependencies": {
     "amqplib": "^0.10.3",
     "dotenv": "^16.0.3",
-    "eslint": "^8.25.0",
     "googleapis": "^108.0.0",
     "nodemailer": "^6.8.0",
     "nodemailer-express-handlebars": "^5.0.0"
   },
   "devDependencies": {
+    "eslint": "^8.25.0",
+    "eslint-config-standard": "^17.0.0",
+    "eslint-plugin-import": "^2.26.0",
+    "eslint-plugin-n": "^15.3.0",
+    "eslint-plugin-promise": "^6.1.1",
     "nodemon": "^2.0.20"
   }
 }
