--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
     "dotenv": "^16.0.3",
     "googleapis": "^108.0.0",
     "nodemailer": "^6.8.0",
-    "nodemailer-express-handlebars": "^5.0.0"
+    "nodemailer-express-handlebars": "^5.0.0",
+    "pino": "^8.11.0",
+    "pino-pretty": "^10.0.0"
   },
   "devDependencies": {
     "eslint": "^8.25.0",
